fix: 修改 header z-index，改善漸層透明色問題
問題：
1. 底下各區域的文字、配色會顯示於 header 上

原因：
1. header 並未設置 z-index

調整項目：
1. 將 .header 的 z-index 設置為 999。

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -263,6 +263,7 @@ html {
       grid-template-columns: .5fr .5fr 16fr 4fr;
       grid-template-areas: "i1 i2 X2 X3";
   top: 0;
+  z-index: 999;
 }
 
 .header__heading {
